appId: host.exp.Exponent # This is the app ID for testing with Expo Go.
---
- launchApp
- tapOn: 'Explore.*'
- tapOn: '.*File-based routing'
- assertVisible: 'This app has two screens.*'
